--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
     "vue": "^2.5.7"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "css-loader": "^0.28.7",
     "element-ui": "^2.0.7",
+    "fs": "0.0.1-security",
     "style-loader": "^0.19.0",
+    "vue-chartjs": "^3.0.2",
+    "vue-passport": "^1.0.13",
+    "vue-router": "^3.0.1",
+    "vue-tables-2": "^1.2.30",
     "vuex": "^3.0.1"
   }
 }
